--- a/k8s/db.yaml
+++ b/k8s/db.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: demo-db
+  namespace: prod-1
 type: servicebinding.io/postgresql
 stringData:
   type: "postgresql"
@@ -18,6 +19,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: demo-db
+  namespace: prod-1
 spec:
   ports:
     - port: 5432
@@ -29,6 +31,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: demo-db
+  namespace: prod-1
   labels:
     app: demo-db
 spec:
