--- a/k8s/petclinic.yml
+++ b/k8s/petclinic.yml
@@ -2,35 +2,35 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: petclinic
+  name: ${DOCKER_NAME}-service
+  namespace: prod-1
 spec:
-  type: NodePort
   ports:
     - port: 80
       targetPort: 8080
   selector:
-    app: petclinic
-
+    app: ${DOCKER_NAME}
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: petclinic
+  name: ${DOCKER_NAME}
+  namespace: prod-1
   labels:
-    app: petclinic
+    app: ${DOCKER_NAME}
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: petclinic
+      app: ${DOCKER_NAME}
   template:
     metadata:
       labels:
-        app: petclinic
+        app: ${DOCKER_NAME}
     spec:
       containers:
-        - name: workload
-          image: dsyer/petclinic
+        - name: ${DOCKER_NAME}
+          image: ${MY_REGISTRY}/${DOCKER_NAME}:${BUILD_TAG} 
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: postgres
