--- a/k8s/petclinic.yaml
+++ b/k8s/petclinic.yaml
@@ -40,7 +40,19 @@ spec:
               value: |
                 {
                   "management.endpoint.health.probes.add-additional-paths": true
-                }               
+                } 
+            - name: POSTGRES_URL
+              value: jdbc:postgresql://demo-db:5432/petclinic
+            - name: POSTGRES_USER
+              valueFrom:
+                secretKeyRef:
+                  name: demo-db
+                  key: username
+            - name: POSTGRES_PASS
+              valueFrom:
+                secretKeyRef:
+                  name: demo-db
+                  key: password
           ports:
             - name: http
               containerPort: 8080
