--- a/k8s/petclinic.yaml
+++ b/k8s/petclinic.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ${DOCKER_NAME}-service
-  namespace: prod-1
+  namespace: ${GIT_BRANCH}
 spec:
   ports:
     - port: 80
@@ -15,7 +15,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: ${DOCKER_NAME}
-  namespace: prod-1
+  namespace: ${GIT_BRANCH}
   labels:
     app: ${DOCKER_NAME}
 spec:
