--- a/k8s/petclinic.yaml
+++ b/k8s/petclinic.yaml
@@ -2,34 +2,34 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: ${DOCKER_NAME}-service
-  namespace: ${GIT_BRANCH}
+  name: spring-petclinic
+  namespace: prod-1
 spec:
   ports:
     - port: 80
       targetPort: 8080
   selector:
-    app: ${DOCKER_NAME}
+    app: spring-petclinic
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: ${DOCKER_NAME}
-  namespace: ${GIT_BRANCH}
+  name: spring-petclinic
+  namespace: prod-1
   labels:
-    app: ${DOCKER_NAME}
+    app: spring-petclinic
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: ${DOCKER_NAME}
+      app: spring-petclinic
   template:
     metadata:
       labels:
-        app: ${DOCKER_NAME}
+        app: spring-petclinic
     spec:
       containers:
-        - name: ${DOCKER_NAME}
+        - name: spring-petclinic
           image: docker.io/seymaca/spring-petclinic:10
           env:
             - name: SPRING_PROFILES_ACTIVE
